# finance_playground

./: .dockerignore  .gitignore  .travis.yml  CNAME  LICENSE  Makefile  Pipfile  README.md  data_scraper.conf  environment.yml  flake.nix  gh_deploy.enc  github_deploy_key.enc  index.html  postBuild  pyproject.toml  template.tmpl  travis_deploy.enc
alert/: Cargo.toml  Makefile  README.md
archive/: README.md  exploring_visualizations.ipynb  hdf5_store.ipynb
backtester/: backtester.py  event.py  portfolio.py  utils.py
css/: main.css
data_scraper/: __init__.py  __main__.py  backup.py  cboe.py  logconfig.ini  notifications.py  tiingo.py  utils.py  validation.py
diversification_dalio_holy_grail/: README.md  index.html  template.tmpl
docker/: docker-compose.yml
emergence_of_cooperation/: README.md  index.html  template.tmpl
ergodicity_explorations/: README.md  index.html  template.tmpl
evaluating_gambles/: README.md  index.html  template.tmpl
intro_finance/: README.md  index.html  template.tmpl
notebooks/: 0.1-metdinov-exploring-visualizations.ipynb  0.2-metdinov-wrangling-cboe-data.ipynb  0.3-metdinov-exploring-options-strategies.ipynb  0.4-hdf5-store.ipynb  0.4-metdinov-hdf5-store.ipynb  0.5-dask-dataframes.ipynb  0.6-iron-butterfly.ipynb  diversification-dalio-holy-grail.ipynb  ergodicity-explorations.ipynb  evaluating-gambles-presentation.ipynb  evaluating-gambles-presentation.slides.html  intro-finance.ipynb  intro-finance.slides.html
references/: README.md  index.html  template.tmpl
rgbm_animation/: index.html  package-lock.json  package.json
(+145 files in other folders)
