[project]
name = "finance-playground"
version = "0.1.0"
description = "Exploring and analyzing financial instruments with Jupyter notebooks"
requires-python = ">=3.11"
dependencies = [
    # Core
    "numpy",
    "pandas>=2.1",
    "scipy",
    "matplotlib",
    "seaborn",
    "altair>=5",
    "jupyterlab>=4",
    # Data
    "pandas-datareader",
    "ipywidgets",
    "tables",
    # ML/Stats
    "scikit-learn",
    "statsmodels",
    "pmdarima",
    "dask[dataframe]",
    # Deep learning
    "tensorflow>=2.15",
    "tensorflow-probability",
    # Bayesian
    "pymc>=5",
    "arviz",
    # Prophet
    "prophet>=1.1",
    # GARCH
    "arch>=6.0",
    # Geo
    "geopy",
    "folium",
    "PyWavelets",
]
