[project]
name = "finance-playground"
version = "0.1.0"
description = "Exploring and analyzing financial instruments"
requires-python = ">=3.11"
dependencies = [
    # Core
    "numpy",
    "pandas>=2.1",
    "scipy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
competitions = [
    # ML/Stats
    "scikit-learn",
    "statsmodels",
    "pmdarima",
    # Deep learning
    "tensorflow>=2.15",
    "tensorflow-probability[tf]",
    # Bayesian
    "pymc>=5",
    "arviz<1.0",
    # Prophet
    "prophet>=1.1",
    # GARCH
    "arch>=6.0",
    # Geo (rainfall forecasting)
    "geopy",
    "folium",
    "PyWavelets",
    # HDF5
    "tables",
    # openpyxl for xlsx reading
    "openpyxl",
]
